--- a/src/legal_fee_tracker_frontend/package.json
+++ b/src/legal_fee_tracker_frontend/package.json
@@ -11,18 +11,24 @@
     "format": "prettier --write \"src/**/*.{json,js,jsx,ts,tsx,css,scss}\""
   },
   "dependencies": {
+    "@dfinity/agent": "^3.4.1",
+    "@dfinity/auth-client": "^3.4.1",
+    "@dfinity/candid": "^3.4.1",
+    "@dfinity/identity": "^3.4.1",
+    "@dfinity/principal": "^3.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@dfinity/agent": "^3.0.0",
-    "@dfinity/candid": "^3.0.0",
-    "@dfinity/principal": "^3.0.0"
+    "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.1",
+    "autoprefixer": "^10.4.21",
     "dotenv": "^16.3.1",
+    "postcss": "^8.5.6",
     "sass": "^1.63.6",
+    "tailwindcss": "^4.1.16",
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
     "vite-plugin-environment": "^1.1.3"
