--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "type": "module",
   "workspaces": [
     "src/legal_fee_tracker_frontend"
-  ]
+  ],
+  "devDependencies": {
+    "@tailwindcss/vite": "^4.1.16"
+  }
 }
