--- a/src/legal_fee_tracker_frontend/package.json
+++ b/src/legal_fee_tracker_frontend/package.json
@@ -16,9 +16,6 @@
     "@dfinity/candid": "^3.4.1",
     "@dfinity/identity": "^3.4.1",
     "@dfinity/principal": "^3.4.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^7.9.5",
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@neondatabase/serverless": "^0.10.4",
@@ -69,10 +66,11 @@
     "passport-local": "^1.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.7",
+    "react-router-dom": "^7.9.5",
     "recharts": "^2.15.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
@@ -84,16 +82,20 @@
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.1",
-    "autoprefixer": "^10.4.21",
+    "autoprefixer": "^10.4.20",
     "dotenv": "^16.3.1",
-    "postcss": "^8.5.6",
+    "drizzle-kit": "^0.31.4",
+    "esbuild": "^0.25.0",
+    "postcss": "^8.4.47",
     "sass": "^1.63.6",
-    "tailwindcss": "^4.1.16",
-    "typescript": "^5.1.3",
-    "vite": "^4.3.9",
+    "tailwindcss": "^3.4.17",
+    "tsx": "^4.20.5",
+    "typescript": "5.6.3",
+    "vite": "^5.4.20",
     "vite-plugin-environment": "^1.1.3"
   }
 }
